--- a/CPAlertViewController.xcodeproj/xcshareddata/xcschemes/CPAlertViewControllerDemo.xcscheme
+++ b/CPAlertViewController.xcodeproj/xcshareddata/xcschemes/CPAlertViewControllerDemo.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "95FA1DDD1C1669D500FFCD05"
-               BuildableName = "CPAlertViewController.app"
-               BlueprintName = "CPAlertViewController"
+               BuildableName = "CPAlertViewControllerDemo.app"
+               BlueprintName = "CPAlertViewControllerDemo"
                ReferencedContainer = "container:CPAlertViewController.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,8 +33,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "95FA1DDD1C1669D500FFCD05"
-            BuildableName = "CPAlertViewController.app"
-            BlueprintName = "CPAlertViewController"
+            BuildableName = "CPAlertViewControllerDemo.app"
+            BlueprintName = "CPAlertViewControllerDemo"
             ReferencedContainer = "container:CPAlertViewController.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -56,8 +56,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "95FA1DDD1C1669D500FFCD05"
-            BuildableName = "CPAlertViewController.app"
-            BlueprintName = "CPAlertViewController"
+            BuildableName = "CPAlertViewControllerDemo.app"
+            BlueprintName = "CPAlertViewControllerDemo"
             ReferencedContainer = "container:CPAlertViewController.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -75,8 +75,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "95FA1DDD1C1669D500FFCD05"
-            BuildableName = "CPAlertViewController.app"
-            BlueprintName = "CPAlertViewController"
+            BuildableName = "CPAlertViewControllerDemo.app"
+            BlueprintName = "CPAlertViewControllerDemo"
             ReferencedContainer = "container:CPAlertViewController.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
